--- a/src/client/resources/assets/radial-hot-bar/lang/ru_ru.json
+++ b/src/client/resources/assets/radial-hot-bar/lang/ru_ru.json
@@ -19,5 +19,7 @@
   "config.radialhotbar.option.autoSort": "Автоматическая сортировка",
   "config.radialhotbar.option.autoSort.tooltip": "Автоматически сортирует предметы по категориям: инструменты, оружие, еда, блоки и зелья.",
   "config.radialhotbar.option.autoEquipArmor": "Автоматически надевать броню",
-  "config.radialhotbar.option.autoEquipArmor.tooltip": "Автоматически надевает броню при выборе её в радиальном меню."
+  "config.radialhotbar.option.autoEquipArmor.tooltip": "Автоматически надевает броню при выборе её в радиальном меню.",
+  "config.radialhotbar.option.hotSwapClick": "Быстрая смена слота",
+  "config.radialhotbar.option.hotSwapClick.tooltip": "Нажатие клавиши без выбора слота вернёт вас к последнему использованному слоту."
 }
